Bug 194490 - changing layer's visibility or lock shouldn't select said layer
Summary: changing layer's visibility or lock shouldn't select said layer
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-29 01:05 UTC by Elián Hanisch
Modified: 2009-06-01 13:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elián Hanisch 2009-05-29 01:05:13 UTC
Version:           2.1 Alpha (using 4.2.2 (KDE 4.2.2), Kubuntu packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.28-11-generic

when you're working in a particular layer, and you change the visibility of another layer, the layer selection changes. This can lead to mistakes where the artist paints in the wrong layer, like:

you're working in a image with several layers and you tick off the visibility of a non-selected layer (for whatever reason), for get back to painting you have to select again the previous layer.

or you're working in a image with several layers were some are invisible, you make one of those layers visible again (for get a better view of the end result, whatever) if you're not careful when you get back to paint you won't be painting in the layer you previously were working.

many times I had to empty the undo history because I was painting in a different layer than I thought I was.
Comment 1 Cyrille Berger 2009-06-01 13:43:03 UTC
SVN commit 976235 by berger:

Fix: don't switch layers when seting visiblity and locking

BUG:194490



 M  +10 -10    KoDocumentSectionDelegate.cpp  
 M  +1 -4      KoDocumentSectionView.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=976235