Fix: don't switch layers when seting visiblity and locking

BUG:194490


svn path=/trunk/koffice/; revision=976235